# pinyin_cpp

./: .clang-format  .clangd  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  vcpkg.json
scripts/: lcompile.ps1  llaunch.ps1  lrun.ps1  prepare_env.py
scripts/config_files/: .clangd  CMakeLists.txt  CMakePresets.json
src/: main.cpp  pinyin_query.cpp  pinyin_query.h  quanpin_query.cpp  quanpin_query.h  shuangpin_query.cpp  shuangpin_query.h
